# Cell

./: .gitignore
CellEngineProject/: CMakeLists.txt  CellConstants.h  CellEngineAminoAcids.h  CellEngineAtom.cpp  CellEngineAtom.h  CellEngineBasicParallelExecutionData.h  CellEngineBasicParticlesOperations.cpp  CellEngineBasicParticlesOperations.h  CellEngineBasicVoxelsOperations.h  CellEngineBuildParticlesDataOperations.h  CellEngineCIFDataFile.cpp  CellEngineCIFDataFile.h  CellEngineCIFDataFileReader.cpp  CellEngineCIFDataFileReader.h  CellEngineCIFDataFileReaderOfFullAtomSimulationSpace.h  CellEngineCIFDataFileReaderOfVoxelSimulationSpace.h  CellEngineCIFFileOpenGLVisualizer.cpp  CellEngineCIFWindowGL.cpp  CellEngineCIFWindowGL.h  CellEngineChemicalReaction.h  CellEngineChemicalReactions.cpp  CellEngineChemicalReactions.h  CellEngineChemicalReactionsCreator.cpp  CellEngineChemicalReactionsCreator.h  CellEngineChemicalReactionsEngine.cpp  CellEngineChemicalReactionsEngine.h  CellEngineChemicalReactionsInBasicSimulationSpace.cpp  CellEngineChemicalReactionsInBasicSimulationSpace.h  CellEngineChemicalReactionsInFullAtomSimulationSpace.cpp  CellEngineChemicalReactionsInFullAtomSimulationSpace.h  CellEngineChemicalReactionsInSimulationSpace.cpp  CellEngineChemicalReactionsInSimulationSpace.h  CellEngineChemicalReactionsInVoxelSimulationSpace.cpp  CellEngineChemicalReactionsInVoxelSimulationSpace.h  CellEngineChemicalReactionsInVoxelSpace.cpp  CellEngineChemicalReactionsInVoxelSpace.h  CellEngineChemicalReactionsManager.h  CellEngineColors.cpp  CellEngineColors.h  CellEngineCompiledDataCreator.cpp  (+100 more)
CellEngineProject/include/: object.h  sb6mfile.h  sb7.h  sb7color.h  sb7ext.h  sb7ktx.h  sb7textoverlay.h  shader.h  vmath.h
CellEngineProject/include/GL/: glcorearb.h
CellEngineProject/mds/: CellEngineMolecularDynamicsSimulationBasicComputations.cpp  CellEngineMolecularDynamicsSimulationBasicComputations.h  CellEngineMolecularDynamicsSimulationConstantsForceField1.h  CellEngineMolecularDynamicsSimulationForceField1.cpp  CellEngineMolecularDynamicsSimulationForceField1.h  CellEngineMolecularDynamicsSimulationForceField1Constants.h  CellEngineMolecularDynamicsSimulationForceField2.cpp  CellEngineMolecularDynamicsSimulationForceField2.h  CellEngineMolecularDynamicsSimulationForceField2Types.h  CellEngineMolecularDynamicsSimulationForceField3.cpp  CellEngineMolecularDynamicsSimulationForceField4.cpp  CellEngineMolecularDynamicsSimulationForceField4.h  CellEngineMolecularDynamicsSimulationForceField4Constants.h  CellEngineMolecularDynamicsSimulationForceField4Types.h  CellEngineMolecularDynamicsSimulationForceFieldCommonTypes.h
CellEngineProject/mpi/: CellEngineMPITests.cpp  CellEngineMPITests.h
CellEngineProject/shaders/: per-fragment-phong.fs.glsl  per-fragment-phong.vs.glsl  per-fragment-simple.fs.glsl  per-fragment-simple.vs.glsl  per-vertex-phong.fs.glsl  per-vertex-phong.vs.glsl
CellEngineProject/srcsb7/: gl3w.c  sb7.cpp  sb7color.cpp  sb7ktx.cpp  sb7object.cpp  sb7shader.cpp  sb7textoverlay.cpp
CellEngineProject/tests/: CellEngineRunTests.cpp
CellEngineSolution/: CellEngineSolution.sln  Description.txt
CellEngineSolution/CellEngineProject/: Application.rc  CMakeLists.txt  CellConstants.h  CellEngineCIFDataFile.cpp  CellEngineCIFDataFile.h  CellEngineCIFWindowGL.cpp  CellEngineCIFWindowGL.h  CellEnginePDBDataFile.cpp  CellEnginePDBDataFile.h  CellEnginePDBWindowGL.cpp  CellEnginePDBWindowGL.h  CellEngineProject.vcxproj  CellEngineProject.vcxproj.filters  CellEngineTypes.h  CellEngineWindowGL.cpp  CellEngineWindowGL.h
Common/Compilation/: ConditionalCompilationConstants.h
Common/DateTimeUtils/: DateTimeUtils.cpp  DateTimeUtils.h
Common/DoublyLinkedList/: DoublyLinkedList.h
Common/FileUtils/: FileUtils.cpp  FileUtils.h
Common/Include/: ExceptionsMacro.h
Common/Logger/: Logger.cpp  Logger.h
Common/MathUtils/: AdditionalFunctions.cpp  AdditionalFunctions.h  ArcBall.cpp  ArcBall.h  Combinatorics.cpp  Combinatorics.h  VectorType.h
Common/Platform/: DestinationPlatform.h
Common/StringUtils/: StringUtils.cpp  StringUtils.h
Common/TerminalColorsUtils/: TerminalColorsUtils.h
Docs/: DescirptionOfCellEngineProject.odt  JCVI_syn3A_Simulation_Algorithms_Detailed.odt
MIL/: MILVirtualMachine.cpp
